# mt-data-mcp

./: .env.example  .gitignore  AGENTS.md  AGENT_TRADE.md  COMMIT_MSG.txt  E2E_BTCUSD_CLI_FINDINGS.md  EXAMPLE.md  LICENSE  README.md  REFACTORING_PHASE1.md  __init__.py  check_changes.py  cli.py  config.py  e2e_report2.md  e2e_report_eurusd.md  pyproject.toml  requirements-optional-src.txt  requirements.txt  server.py  test_contract.py  test_market_summary_issue.py  test_monthly_patterns_fix.py  test_volume_validation.py  webui.py
.qwen/: settings.json  settings.json.orig
claude-runtime/: .mcp.json
claude-runtime/.claude/: settings.local.json
claude-runtime/claude/: settings.local.json
code-reports/refacto/: candle-forming-bar-default.md  cli-symbol-positional-consistency.md  cointegration-pairs-trading-outputs.md  collection-data-rows-duplication.md  correlation-cointegration-highlight-contract.md  cross-tool-time-format-contract.md  data-fetch-ticks-format-detail.md  detail-contract-consolidation.md  detail-default-policy.md  finviz-detail-normalization.md  forecast-barrier-optimize-interface.md  forecast-dead-detail-parameters.md  forecast-list-methods-search-parameter.md  forecast-method-discovery-contract.md  labels-triple-barrier-summary-only.md  market-status-holiday-localization.md  market-ticker-daily-context.md  news-pagination-and-filters.md  price-precision-output-rendering.md  sl-tp-parameter-unification.md  symbol-selector-aliases.md  trade-account-info-verbosity.md  trade-history-column-style.md  trade-history-normalized-items-contract.md  trade-place-detail-semantics.md  trade-risk-analyze-parameter-names.md  trade-var-cvar-tool-name.md  var-cvar-empty-portfolio-output.md  wait-event-detail-verbosity.md
docs/: ADVANCED_ANALYTICS.md  BARRIER_FUNCTIONS.md  CAUSAL_DISCOVERY.md  CLI.md  COMMON_ERRORS.md  DENOISING.md  DEPLOYMENT.md  ENV_VARS.md  EXAMPLE.md  FINVIZ.md  FORECAST.md  GLOSSARY.md  LEVELS.md  LIMITATIONS.md  OPTIONS_QUANTLIB.md  OUTPUT.md  README.md  REPORTS.md  SAMPLE-TRADE-ADVANCED.md  SAMPLE-TRADE.md  SETUP.md  SIMPLIFICATION.md  SKTIME.md  TECHNICAL_INDICATORS.md  TEMPORAL.md  TIMESTAMPS.md  TIME_SERIES_DIAGNOSTICS.md  TRADING_RISK.md  TRADING_SAFETY.md  TROUBLESHOOTING.md  WEB_API.md  pattern_review_pr_checklist.md
docs/forecast/: BACKTESTING.md  FORECAST_GENERATE.md  METHODS.md  PATTERN_SEARCH.md  REGIMES.md  UNCERTAINTY.md  VOLATILITY.md
jscpd-report.xml/: jscpd-report.xml
prompts/: agent_intraday_trend.md  agent_liquidity_scalper.md  agent_range_reversion.md  agent_risk_supervisor.md  mtdata_tool_playbook.md  trader.md  trader_active.md  trader_grid_scalper.md  trading_agent_prompt.md
scripts/: backtest_plot.py  detect_mt5_time_offset.py  validate_elliott_live.py
tests/: AGENTS.md  README.md  conftest.py  manual_test.py  smoke_forecast_methods.py  test_analog_coverage.py  test_analog_method_business_logic.py  test_backtest_extended.py  test_backtest_return_target.py  test_barriers_pure.py  test_candlestick_helpers.py  test_candlestick_real_data_validation.py  test_causal_extended.py  test_causal_helpers.py  test_classic_patterns_pure.py  test_cli_coverage.py  test_cli_forecast_typed_args.py  test_cli_help_epilog_business_logic.py  test_cli_list_parsing.py  test_cli_ux_business_logic.py  test_config_business_logic.py  test_core_forecast_business_logic.py  test_data_service.py  test_data_service_coverage.py  test_data_service_utc_epoch_usage.py  test_data_use_cases.py  test_denoise.py  test_denoise_pure.py  test_dimred_pure.py  test_dry_optimization.py  test_eliott_patterns.py  test_elliott_detection.py  test_elliott_extended.py  test_enhancements.py  test_finviz.py  test_finviz_coverage.py  test_finviz_news_business_logic.py  test_finviz_service_hardening.py  test_forecast_barriers.py  test_forecast_common_business_logic.py  (+72 more)
tests/bootstrap/: test_env.py  test_selective_tool_bootstrap.py
tests/core/: test_analytics_business_logic.py  test_bocpd_calibration_cache.py  test_causal_business_logic.py  test_causal_validation.py  test_cli_coverage.py  test_cli_forecast_typed_args.py  test_cli_help_epilog_business_logic.py  test_cli_list_parsing.py  test_cli_ux_business_logic.py  test_config_business_logic.py  test_denoise_describe_causality.py  test_denoise_tools.py  test_detect_mt5_time_offset.py  test_diagnostics_business_logic.py  test_error_envelope.py  test_features_business_logic.py  test_finviz_output_contract.py  test_forecast_import_business_logic.py  test_forecast_tasks.py  test_indicators_business_logic.py  test_labels_coverage.py  test_market_snapshot.py  test_market_status_business_logic.py  test_market_status_contradictory_message.py  test_market_status_early_close.py  test_market_ticker_compact.py  test_market_ticker_errors.py  test_minimal_output_coverage.py  test_minimal_output_toon.py  test_nan_json_compat.py  test_news_business_logic.py  test_options_provider_status_detail.py  test_output_contract.py  test_output_fields.py  test_output_layering_contract.py  test_output_precision.py  test_parameter_contracts.py  test_parse_kv_or_json.py  test_patterns_volume_profile.py  test_pydantic_field_extraction_business_logic.py  (+38 more)
tests/forecast/: test_analog_coverage.py  test_analog_method_business_logic.py  test_backtest_extended.py  test_backtest_return_target.py  test_backtest_sanity_fixes.py  test_barrier_stats.py  test_capabilities_business_logic.py  test_causal_additions.py  test_causal_extended.py  test_causal_helpers.py  test_classical_method_business_logic.py  test_compact_removes_request_metadata.py  test_concrete_train_predict.py  test_contracts.py  test_core_forecast_business_logic.py  test_dry_optimization.py  test_engine_integration.py  test_ensemble_method_business_logic.py  test_ets_arima_business_logic.py  test_forecast_barrier_request_validation.py  test_forecast_barriers.py  test_forecast_common_business_logic.py  test_forecast_common_coverage.py  test_forecast_common_extended.py  test_forecast_common_pure.py  test_hmm_degeneracy.py  (+43 more)
webui/: AGENTS.md  index.html  package-lock.json  package.json  tsconfig.json
(+508 files in other folders)
