[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtdata-mcp-server"
version = "0.1.0"
description = "MetaTrader5 MCP Server for market data retrieval and analysis."
authors = [
    {name = "Emerson Gomes", email = "emerson.gomes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "MetaTrader5>=5.0.5640",
    "mcp>=1.26.0",
    "fastmcp>=3.0.2",
    "typing-extensions>=4.15.0",
    "python-dotenv>=1.2.1",
    "dateparser>=1.3.0",
    "pandas>=2.3.3,<3",
    "numpy>=2.3.5,<2.4",
    "pandas-ta-classic>=0.3.78",
    "TA-Lib>=0.6.8",
    "holidays>=0.91",
    "arch>=8.0.0",
    "scipy>=1.17.1",
    "scikit-learn>=1.7.2,<1.8",
    "scikit-image>=0.26.0",
    "PyWavelets>=1.9.0",
    "EMD-signal>=1.6.4",
    "vmdpy>=0.2",
    "ruptures>=1.0.6,<1.1.0",
    "statsmodels>=0.14.6",
    "statsforecast==1.7.6",
    "sktime==0.40.1",
    "mlforecast==1.0.3",
    "lightgbm>=4.6.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "pillow>=12.1.1",
    "accelerate>=1.12.0",
    "chronos-forecasting>=2.2.2",
    "transformers>=4.57.6,<5",
    "huggingface-hub>=0.36.2,<1",
    "timesfm @ git+https://github.com/google-research/timesfm.git@6bd8044275f8b76cdc9554f2fecccac5f31a156c",
    "tslearn>=0.8.0",
    "h5py>=3.15.1",
    "stumpy>=1.14.1",
    "precise-patterns @ git+https://github.com/BennyThadikaran/precise-patterns.git@e92e10cbb1b6e414c89ad287be32ddae4214b353",
    "matplotlib>=3.10.8",
    "fastapi>=0.134.0",
    "uvicorn[standard]>=0.41.0",
    "coreforecast>=0.0.17",
    "fugue>=0.9.7",
    "numba>=0.64.0",
    "tsfresh>=0.21.1",
    "finvizfinance>=1.3.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mtdata*"]

[project.scripts]
mtdata-sse = "mtdata.core.server:main_sse"
mtdata-stdio = "mtdata.core.server:main_stdio"
mtdata-webapi = "mtdata.core.web_api:main_webapi"
mtdata-cli = "mtdata.core.cli:main"

[project.urls]
Homepage = "https://github.com/emerzon/mt-data-mcp"
Repository = "https://github.com/emerzon/mt-data-mcp"
