[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtdata-mcp-server"
version = "0.1.0"
description = "MetaTrader5 MCP Server for market data retrieval and analysis."
authors = [
    {name = "Emerson Gomes", email = "emerson.gomes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "MetaTrader5>=5.0.5735",
    "mcp>=1.28.1",
    "fastmcp>=3.4.4",
    "typing-extensions>=4.15.0",
    "python-dotenv>=1.2.2",
    "PyYAML>=6.0.3",
    "dateparser>=1.4.0",
    "pytz>=2026.2",
    "tzlocal>=5.3.1",
    # pandas 3 is installable on 3.14 but deferred pending a dedicated migration pass
    "pandas>=2.3.3,<3",
    # numpy 2.5+ conflicts with numba 0.66 and current sktime pins (see forecast-classical)
    "numpy>=2.3.5,<2.5",
    "pandas-ta-classic>=0.6.52",
    "TA-Lib>=0.7.0",
    "holidays>=0.97",
    "scipy>=1.17.1",
    # sktime (through 1.0.x) still requires scikit-learn<1.8
    "scikit-learn>=1.7.2,<1.8",
    "hmmlearn>=0.3.3",
    "scikit-image>=0.26.0",
    "PyWavelets>=1.9.0",
    "EMD-signal>=1.10.0",
    "vmdpy>=0.2",
    # ruptures 1.1.x currently excludes real 3.14.x via requires_python / lacks cp314 wheels
    "ruptures>=1.0.6,<1.1.0",
    "statsmodels>=0.14.6",
    "tslearn>=0.9.0",
    "h5py>=3.16.0",
    "stumpy>=1.14.1",
    "matplotlib>=3.10.9",
    "finvizfinance>=1.3.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mtdata*"]

[project.optional-dependencies]
forecast-classical = [
    "arch>=8.0.0",
    "optuna>=4.9.0",
    "QuantLib>=1.42.1",
    # statsforecast 2.x has no cp314 wheels; source build needs Fortran on Windows
    "statsforecast>=1.7.6,<2",
    # 1.0.x raises numpy ceiling to <2.5 (still sklearn<1.8); pure-Python on 3.14
    "sktime>=1.0.1",
    "mlforecast>=1.1.0",
    "lightgbm>=4.6.0",
    "coreforecast>=0.0.18",
    "fugue>=0.9.7",
    "numba>=0.66.0",
    "tsfresh>=0.21.2",
]
forecast-foundation = [
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "pillow>=12.2.0",
    "accelerate>=1.14.0",
    "chronos-forecasting>=2.3.1",
    "transformers>=5.12.0,<6",
    "huggingface-hub>=1.19.0,<2",
]
forecast-timesfm = [
    "torch>=2.11.0",
    "timesfm @ git+https://github.com/google-research/timesfm.git@6bd8044275f8b76cdc9554f2fecccac5f31a156c",
]
patterns-ext = [
    # stock-pattern has no setup.py/pyproject.toml; manual install required (see docs/SETUP.md)
]
web = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
]
news-embeddings = [
    "sentence-transformers>=5.5.1,<6",
    "huggingface-hub>=1.19.0,<2",
]
news-ycnbc = [
    "ycnbc @ git+https://github.com/codestorm-official/ycnbc.git@d5e50293be499b617edaa10a03467b4184193a4e",
]
dimred-ext = [
    "umap-learn>=0.5.12",
]
all = [
    "arch>=8.0.0",
    "hmmlearn>=0.3.3",
    "optuna>=4.9.0",
    "QuantLib>=1.42.1",
    "statsforecast>=1.7.6,<2",
    "sktime>=1.0.1",
    "mlforecast>=1.1.0",
    "lightgbm>=4.6.0",
    "coreforecast>=0.0.18",
    "fugue>=0.9.7",
    "numba>=0.66.0",
    "tsfresh>=0.21.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "pillow>=12.2.0",
    "accelerate>=1.14.0",
    "chronos-forecasting>=2.3.1",
    "transformers>=5.12.0,<6",
    "huggingface-hub>=1.19.0,<2",
    "tsdownsample>=0.1.5.1",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "sentence-transformers>=5.5.1,<6",
    "umap-learn>=0.5.12",
]
all-git = [
    "arch>=8.0.0",
    "hmmlearn>=0.3.3",
    "optuna>=4.9.0",
    "QuantLib>=1.42.1",
    "statsforecast>=1.7.6,<2",
    "sktime>=1.0.1",
    "mlforecast>=1.1.0",
    "lightgbm>=4.6.0",
    "coreforecast>=0.0.18",
    "fugue>=0.9.7",
    "numba>=0.66.0",
    "tsfresh>=0.21.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "pillow>=12.2.0",
    "accelerate>=1.14.0",
    "chronos-forecasting>=2.3.1",
    "transformers>=5.12.0,<6",
    "huggingface-hub>=1.19.0,<2",
    "timesfm @ git+https://github.com/google-research/timesfm.git@6bd8044275f8b76cdc9554f2fecccac5f31a156c",
    "tsdownsample>=0.1.5.1",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "sentence-transformers>=5.5.1,<6",
    "umap-learn>=0.5.12",
    "ycnbc @ git+https://github.com/codestorm-official/ycnbc.git@d5e50293be499b617edaa10a03467b4184193a4e",
]

[project.scripts]
mtdata-sse = "mtdata.core.server:main_sse"
mtdata-stdio = "mtdata.core.server:main_stdio"
mtdata-streamable-http = "mtdata.core.server:main_streamable_http"
mtdata-webapi = "mtdata.core.web_api:main_webapi"
mtdata-cli = "mtdata.core.cli:main"

[project.urls]
Homepage = "https://github.com/emerzon/mt-data-mcp"
Repository = "https://github.com/emerzon/mt-data-mcp"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C901"]
ignore = ["E402", "E501", "E701", "E702", "E741", "B904", "B905"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E731", "F401", "F841", "B007", "B017", "B023", "B028"]
"src/mtdata/**/__init__.py" = ["F401"]
"src/mtdata/core/regime/api.py" = ["F401"]
"src/mtdata/core/report/utils.py" = ["F401"]
"src/mtdata/core/web_api.py" = ["B008"]
"src/mtdata/core/server.py" = ["F401"]
"src/mtdata/core/schema_attach.py" = ["B023"]
"src/mtdata/utils/indicators.py" = ["B023"]
"src/mtdata/services/data_service.py" = ["F401"]
"src/mtdata/forecast/barriers_shared.py" = ["F401"]
"src/mtdata/forecast/forecast.py" = ["F401"]
"src/mtdata/patterns/classic.py" = ["F401"]
"src/mtdata/shared/constants.py" = ["F401"]
